add validate endpoint and request spec
